LinKreta_POC_Repository/force-app/main/default/objects/ExpertisePL__c/ExpertisePL__c.object-meta.xml
<CustomObject>
    <description>This object is part of the custom functionality for managing the dependency between the 3 Picklists on the Lead object namely Solution (Single Picklist), Expertise (Multi Picklist) and Sub Expertise (Multi Picklist). It stores the List of Values (LOV) configured for the field named Expertise.</description>
    <label>Expertise (PL)</label>
    <nameField>
        <displayFormat>EX - {000000}</displayFormat>
        <label>Expertise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expertise (PL)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>