LinKreta_POC_Repository/force-app/main/default/objects/ExpertisePL__c/fields/ExpertiseMaster__c.field-meta.xml
<CustomField>
    <fullName>ExpertiseMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expertise Master</label>
    <referenceTo>ExpertiseMaster__c</referenceTo>
    <relationshipLabel>Expertise (PL)</relationshipLabel>
    <relationshipName>Expertise_PL</relationshipName>
    <type>Lookup</type>
</CustomField>