LinKreta_POC_Repository/force-app/main/default/objects/ExpertisePL__c/fields/LOV_Id__c.field-meta.xml
<CustomField>
    <fullName>LOV_Id__c</fullName>
    <label>LOV Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>