LinKreta_POC_Repository/force-app/main/default/objects/ExpertisePL__c/fields/Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key__c</fullName>
    <description>This field is populated by a Flow named &quot;Expertise (PL) | General Flow - For Create &amp; Update (FF Updates)&quot;. As the name suggests, this is the Primary Key for this SObject.</description>
    <label>Primary Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>