LinKreta_POC_Repository/force-app/main/default/objects/ExpertisePL__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>This stores and represents the dependency between the Solution (Controlling) field and the Expertise (Controlled) field.</description>
    <label>Solution</label>
    <referenceTo>SolutionPL__c</referenceTo>
    <relationshipLabel>Expertise</relationshipLabel>
    <relationshipName>Expertise</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>