LinKreta_POC_Repository/force-app/main/default/objects/ExpertisePL__c/fields/SolutionLOV__c.field-meta.xml
<CustomField>
    <fullName>SolutionLOV__c</fullName>
    <description>This represents the List of Value of the associated Solution (Controlling) field.</description>
    <formula>Solution__r.LOV__c</formula>
    <label>Solution (LOV)</label>
    <type>Text</type>
</CustomField>