LinKreta_POC_Repository/force-app/main/default/objects/ExpertisePL__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>LOV__c</columns>
    <columns>LOV_Id__c</columns>
    <columns>Solution__c</columns>
    <columns>SolutionLOV__c</columns>
    <columns>BUL__c</columns>
    <columns>ExpertiseMaster__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Primary_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>